...
	<string name="app_name" translatable="false">NymVPN</string>
	<string name="provider" translatable="false">net.nymtech.nymvpn.provider</string>
	<string name="settings">Settings</string>
	<string name="disconnecting">Disconnecting</string>
	<string name="connecting">Connecting</string>
	<string name="five_hop_mixnet">Anonymous (mixnet)</string>
	<string name="connect">Connect</string>
	<string name="disconnect">Disconnect</string>
	<string name="init_client">Initializing client…</string>
	<string name="establishing_connection">Establishing connection</string>
	<string name="display_theme">Display theme</string>
	<string name="light_theme">Light theme</string>
	<string name="dark_theme">Dark theme</string>
	<string name="automatic">Automatic</string>
	<string name="device_theme">Use device theme</string>
	<string name="search">Search</string>
	<string name="is_selected">Selected</string>
...
	<string name="five_hop_explanation">Maximum privacy through 5–hop routing (up to 1–5 Mbps). Dummy traffic and timing obfuscation for enhanced anonymity. Perfect for highly sensitive activities like payments, emails, and messages.</string>
	<string name="continue_reading">Continue reading</string>
	<string name="appearance">Appearance</string>
	<string name="language">Language</string>
	<string name="gateway_modal_description">We infer server locations based on their IP addresses, but the actual locations may vary slightly.</string>
	<string name="gateway_locations_title">Details on server locations</string>
	<string name="exit_gateway_locations_title">Choosing exit locations</string>
	<string name="exit_gateway_locations_sub_item_1">Streaming</string>
	<string name="exit_gateway_locations_sub_item_1_desc_link_text">Residential IP servers optimized</string>
	<string name="exit_gateway_locations_sub_item_1_desc">for streaming and content access. May experience slower speeds due to higher demand and hardware limitations.</string>
	<string name="exit_gateway_locations_sub_item_2">Location accuracy</string>
	<string name="exit_gateway_locations_sub_item_2_desc">Displayed locations are</string>
	<string name="exit_gateway_locations_sub_item_2_desc_link_text">determined from IP addresses</string>
	<string name="exit_gateway_locations_sub_item_2_desc_after_link">and may not reflect exact physical locations.</string>
	<string name="ok">OK</string>
	<string name="mode_support_link" translatable="false">https://support.nym.com/hc/articles/24326365096721-What-s-the-difference-between-Fast-and-Anonymous-mode</string>
	<string name="vpn_connection">VPN Connection</string>
...
	<string name="device_added_success">Device successfully added to your account</string>
	<string name="invalid_recovery_phrase">Invalid recovery passphrase</string>
	<string name="log_out">Log out</string>
	<string name="account">Account</string>
	<string name="mnemonic_example">e.g. smoke artifact velvet skull pop palace tortoise damage rough…</string>
	<string name="dynamic">Dynamic</string>
	<string name="system_wallpaper">System wallpaper theme</string>
	<string name="initializing">Initializing</string>
	<string name="stop">Stop</string>
...
	<string name="two_hop_title">Fast (WireGuard)</string>
	<string name="disabled_while_connecting">Disabled while connecting to VPN</string>
	<string name="exit_location">Exit server</string>
	<string name="entry_location">Entry server</string>
	<string name="no_results_found">No results found.</string>
	<string name="how_to_run_gateway">how to run a server.</string>
	<string name="or_learn">or learn</string>
...
	<string name="update_required">Update required!</string>
	<string name="update">Update</string>
	<string name="log_out_title">Log out of this device?</string>
	<string name="log_out_body">This disconnects the VPN and removes your account from this device. Without your passphrase, you can\'t log back in.</string>
	<string name="log_out_passphrase_confirm">I saved my passphrase</string>
...
	<string name="log_out_show_passphrase_description">Show passphrase, asks to confirm it\'s you</string>
	<string name="cancel">Cancel</string>
	<string name="info">Info</string>
	<string name="collapse">Collapse</string>
	<string name="expand">Expand</string>
...
	<string name="button_done">Done</string>
	<string name="button_discard">Discard</string>
	<string name="button_add">Add</string>
	<string name="here">here</string>
	<string name="score_text_high">High</string>
	<string name="score_text_medium">Medium</string>
	<string name="score_text_low">Low</string>
	<string name="score_text_offline">Offline</string>
	<string name="skip">Skip</string>
	<string name="get_started">Get started</string>
	<string name="button_back">Back</string>
	<!-- Dialogs & info messaged -->
...
	<string name="connection_state_connecting_tunnel">Establishing server connection (7/7)</string>
	<!-- One-click mode -->
	<string name="one_click_mode_fast">dVPN</string>
	<string name="connect_mode_mixnet">Mixnet</string>
	<string name="one_click_nym_exit_node">Exit server</string>
	<string name="one_click_nym_entry_node">Entry server</string>
...
	<!-- Server Screen -->
	<string name="gateway_safest">Auto</string>
	<string name="gateway_random">Random server</string>
	<string name="server_entry_tab">Entry</string>
	<string name="server_exit_tab">Exit</string>
	<string name="server_search_text">Search location or server</string>
	<plurals name="server_countries_count_text">
		<item quantity="one">%1$s country</item>
...
	<string name="server_no_recents_text">No recent servers yet</string>
	<!-- Auth component -->
	<string name="auth_welcome_title">Welcome!</string>
	<string name="auth_welcome_description">To the world\'s most private VPN</string>
	<string name="auth_welcome_login_button">Login to my account</string>
	<string name="auth_sign_up_title">Sign Up</string>
	<string name="auth_sign_up_account_button">Anonymous account</string>
	<string name="auth_sign_up_social_button">Sign up with socials *</string>
	<string name="auth_sign_up_info">* Signing up with an existing social account \ndecreases your anonymity.</string>
	<string name="auth_log_in_title">Log in</string>
	<string name="auth_log_in_passphrase_button">Log in with 24 words</string>
	<string name="auth_log_in_social_button">Log in using socials *</string>
	<string name="auth_log_in_info">* You need to connect socials to an existing account \nfirst before you can use them for login. </string>
	<string name="auth_passphrase_login_button">Login</string>
	<string name="auth_passphrase_input_placeholder">24 word-passphrase</string>
	<!-- Settings Screen -->
	<string name="settings_censorship_title">Anti-censorship</string>
	<string name="settings_passphrase_title">Passphrase</string>
	<string name="settings_dns_title">Customize DNS</string>
	<string name="settings_reset_app_title">Reset app data</string>
	<string name="settings_system_status_title">System status</string>
	<string name="settings_mixnet_tuning_title">Mixnet tuning</string>
	<string name="settings_mixnet_tuning_description">Fine tune your mixnet parameters</string>
	<string name="settings_quit_title">Quit NymVPN</string>
	<string name="settings_app_version_line">App version: %1$s</string>
	<string name="settings_language_crowdin_link" translatable="false">https://crowdin.com/editor/nymvpn-apps</string>
...
	<string name="settings_language_help_description">Make the app better in your language.</string>
	<string name="settings_event_lan_reconnecting">Reconnecting to apply LAN settings…</string>
	<string name="settings_ad_blocking_title">Ad blocking</string>
	<string name="settings_kill_switch_title">Kill switch</string>
	<string name="settings_kill_switch_description">Uses Android\'s **Always-on VPN** to prevent data leaks</string>
	<string name="settings_bypass_lan_title">LAN bypass</string>
	<string name="settings_bypass_lan_description">Allow direct local network access</string>
	<string name="settings_split_tunneling_title">Split tunneling</string>
