...
        Group {
            if entry.status.isConnecting {
                Text("Connecting...")
            } else if entry.status.isDisconnecting {
                Text("Disconnecting...")
            } else if entry.status.isConnected {
                Text("Connected")
                    .foregroundStyle(NymWidgetColors.accent)
            } else {
                switch entry.status {
                case .error:
                    Text("Error")
                        .foregroundStyle(NymWidgetColors.error)
                default:
                    Text("Disconnected")
                }
            }
        }
    }

    var buttonTitle: String {
...
