...
			state = ConnectPanelState(
				connectionState = ConnectionState.Connected,
				accountState = AccountControllerState.ReadyToConnect,
				isMnemonicStored = true,
				connectMode = ConnectMode.FAST,
				exitNode = ServerNode(name = "Paris #1", countryCode = "fr", location = "France", score = Score.HIGH),
				entryNode = ServerNode(name = "Berlin #2", countryCode = "de", location = "Germany", score = Score.MEDIUM),
				initialPanelState = PanelState.FULL,
			),
			onModeChange = {},
			onAction = {},
			onPanelStateChange = {},
			onExitNodeClick = {},
...
