...
		}
	}

	companion object {
		val DEFAULT_DNS_SERVERS = listOf(
			// Quad9
			"9.9.9.9",
			"149.112.112.112",
			"2620:fe::fe",
			"2620:fe::fe:9",

			// Cloudflare
			"1.1.1.1",
...
