...
@Preview(uiMode = Configuration.UI_MODE_NIGHT_YES)
@Composable
private fun CustomDnsCardPreview() {
	NymVPNTheme(Theme.default()) {
		CustomDnsCard(
			initialDns = listOf(
				"192.168.1.1",
				"10.0.0.1",
				"208.67.222.222",
			),
			dnsEnabled = false,
			connectedForUi = true,
			onDnsEnable = {},
...
