appId: net.nymtech.nymvpn.mock.debug
---
- launchApp

- runFlow:
    when:
      visible: "Connection request"
    commands:
      - tapOn: "OK"

- extendedWaitUntil:
    visible:
      text: "Connect"
    timeout: 15000

- tapOn:
    text: "Connect"

- runFlow:
    when:
      visible: "Connection request"
    commands:
      - tapOn: "OK"

- runFlow:
    when:
      visible: "For best connection"
    commands:
      - tapOn: "Skip"

- extendedWaitUntil:
    visible:
      text: "Connected"
    timeout: 20000

- tapOn:
    text: "Disconnect"

- extendedWaitUntil:
    visible:
      text: "Disconnected"
    timeout: 15000
