# Choosing entry and exit locations, then connecting through them.
appId: net.nymtech.nymvpn.mock.debug
tags:
  - ui-validation
---
- runFlow: ../../subflows/open_app.yaml

- tapOn: "dVPN"

- assertVisible: "Entry server"
- assertVisible: "Exit server"

- tapOn:
    text: "Safest"
    below: "Exit server"

- extendedWaitUntil:
    visible:
      text: "Search location or server"
    timeout: 10000
- assertVisible: "Random server"

- tapOn: "Germany"

- extendedWaitUntil:
    visible:
      text: "Connect"
    timeout: 10000
- assertVisible: "Germany"

- tapOn:
    text: "Safest"
    below: "Entry server"

- extendedWaitUntil:
    visible:
      text: "Search location or server"
    timeout: 10000

- tapOn: "United States"

- extendedWaitUntil:
    visible:
      text: "Connect"
    timeout: 10000
- assertVisible: "United States"

- runFlow: ../../subflows/connect.yaml

- extendedWaitUntil:
    visible:
      text: "FAST MODE PROTECTION"
    timeout: 30000
- assertVisible: "Disconnect"

- tapOn: "Disconnect"

- runFlow:
    when:
      visible: "For best connection"
    commands:
      - tapOn: "Skip"

- extendedWaitUntil:
    visible:
      text: "NOT PROTECTED"
    timeout: 30000
