# Searching for a server that does not exist shows the empty state.
appId: net.nymtech.nymvpn.mock.debug
tags:
  - ui-validation
---
- runFlow: ../../subflows/open_app.yaml

- tapOn:
    text: "Safest"
    below: "Exit server"

- assertNotVisible: "No results found."
- assertVisible: "Germany"

- tapOn: "Search location or server"
- inputText: "Random non existing country"

- assertVisible: "No results found."
- assertNotVisible: "Germany"

- tapOn: "Clear text"

- assertVisible: "Germany"
- assertNotVisible: "No results found."
